feat: Update UI and styling for Quadwo's Hub
Refactors the application's user interface and styling to improve the visual presentation and user experience. This includes:

-   Implementing a new font family ('Inter') and adjusting color schemes for better readability and a modern aesthetic.
-   Restructuring the layout to include a dedicated sidebar for navigation and a main content area.
-   Updating various components (Header, Tabs, LoadingSpinner, ResultCard, CopyButton) with refined styles and improved visual hierarchy.
-   Adjusting the prompt formatting in `geminiService.ts` for image generation.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quadwo's Hub</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script type="importmap">
     {
       "imports": {
@@ -17,7 +20,9 @@
     <style>
       body {
         margin: 0;
-        background-color: #f8f9fa;
+        background-color: #f3f4f6; /* A lighter, cleaner gray */
+        font-family: 'Inter', sans-serif;
+        color: #111827; /* Darker text for better contrast */
       }
     </style>
 </head>
